...
import kotlinx.coroutines.*
import kotlinx.coroutines.flow.MutableStateFlow
import kotlinx.coroutines.flow.StateFlow

enum class AllBookmarksEffectType {
    Open,
    Directory,
    Exported,
}

data class AllBookmarksEffect(
    val nonce: String = UUID.randomUUID().toString(),
    val type: AllBookmarksEffectType,
...
